<?xml version="1.0"?>
<package format="2">
  <name>ruvu_bringup</name>
  <version>0.0.0</version>
  <description>The ruvu_bringup package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <build_depend>ruvu_lint</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
