<?xml version="1.0"?>
<!--
Copyright 2020 RUVU Robotics B.V.
-->

<package format="2">
  <name>ruvu_bringup</name>
  <version>0.0.0</version>
  <description>The ruvu_bringup package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>jq</exec_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
