<?xml version="1.0"?>
<package format="2">
  <name>ruvu_rqt</name>
  <version>0.0.0</version>
  <description>The ruvu_rqt package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rqt</exec_depend>
</package>
