<?xml version="1.0"?>
<package format="2">
  <name>ruvu_rqt</name>
  <version>0.0.0</version>
  <description>The ruvu_rqt package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>python-catkin-lint</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
