<?xml version="1.0"?>
<package format="2">
  <name>ruvu_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Generic rviz plugins</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
