<?xml version="1.0"?>
<!--
Copyright 2020 RUVU Robotics B.V.
-->

<package format="2">
  <name>ruvu_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Generic rviz plugins</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>ruvu_lint</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
