<?xml version="1.0"?>
<package format="2">
  <name>pozyx_ros</name>
  <version>0.1.0</version>
  <description>ROS package for the Pozyx positioning system.</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <author email="rein@ruvu.nl">Rein Appeldoorn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>python-pypozyx-pip</exec_depend>
</package>
