<?xml version="1.0"?>
<package format="3">
  <name>pozyx_ros</name>
  <version>0.1.0</version>
  <description>ROS package for the Pozyx positioning system.</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <author email="rein@ruvu.nl">Rein Appeldoorn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pozyx_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>python-pykalman</exec_depend>
  <exec_depend>python-pypozyx-pip</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python_orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pykdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>

  <depend>std_msgs</depend>

  <test_depend>python-catkin-lint</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
