<?xml version="1.0"?>
<package format="2">
  <name>pozyx_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Generic rviz plugins</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>pozyx_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>

  <test_depend>python-catkin-lint</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
