<?xml version="1.0"?>
<package format="2">
  <name>ruvu_costmap_navigation</name>
  <version>0.0.0</version>
  <description>The ruvu_costmap_navigation package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>mbf_costmap_core</depend>
  <depend>mbf_costmap_nav</depend>

  <test_depend>asr_ftc_local_planner</test_depend>
  <test_depend>carrot_planner</test_depend>
  <test_depend>dwa_local_planner</test_depend>
  <test_depend>eband_local_planner</test_depend>
  <test_depend>gazebo_ros</test_depend>
  <test_depend>global_planner</test_depend>
  <test_depend>goal_passer</test_depend>
  <test_depend>navfn</test_depend>
  <test_depend>pose_follower</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>ruvu_gazebo_plugins</test_depend>
  <test_depend>ruvu_rviz_plugins</test_depend>
  <test_depend>simple_local_planner</test_depend>
  <test_depend>rqt_reconfigure</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>xacro</test_depend>

  <test_depend>python-catkin-lint</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
