<?xml version="1.0"?>
<package format="2">
  <name>ruvu_mbf</name>
  <version>0.0.0</version>
  <description>The ruvu_mbf package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <depend>mbf_costmap_core</depend>
  <depend>mbf_costmap_nav</depend>
  <depend>rospy</depend>
  <depend>mbf_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ruvu_lint</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
