<?xml version="1.0"?>
<!--
Copyright 2020 RUVU Robotics B.V.
-->

<package format="2">
  <name>ruvu_mbf</name>
  <version>1.0.0</version>
  <description>The ruvu_mbf package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <depend>roscpp</depend>
  <depend>mbf_msgs</depend>
  <depend>actionlib</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
