<?xml version="1.0"?>
<package format="2">
  <name>ruvu_navigation_playground</name>
  <version>0.0.0</version>
  <description>The ruvu_navigation_playground package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>asr_ftc_local_planner</exec_depend>
  <exec_depend>carrot_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>goal_passer</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>pose_follower</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ruvu_gazebo_plugins</exec_depend>
  <exec_depend>ruvu_mbf</exec_depend>
  <exec_depend>ruvu_rviz_plugins</exec_depend>
  <exec_depend>simple_local_planner</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ruvu_lint</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
