<?xml version="1.0"?>
<package format="2">
  <name>ruvu_networkx</name>
  <version>0.0.0</version>
  <description>The ruvu_networkx package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python-networkx</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>python-catkin-lint</test_depend>
  <test_depend>python-mock</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>ruvu_rviz_plugins</test_depend>
</package>
