<?xml version="1.0"?>
<package format="2">
  <name>ruvu_rabbitmq_bridge</name>
  <version>0.0.0</version>
  <description>The ruvu_rabbitmq_bridge package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>pika</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <test_depend>geometry_msgs</test_depend>
  <test_depend>ruvu_lint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
</package>
