<?xml version="1.0"?>
<package format="2">
  <name>ruvu_web</name>
  <version>0.0.0</version>
  <description>The ruvu_web package</description>

  <maintainer email="rein@todo.todo">rein</maintainer>

  <license>TODO</license>

  <test_depend>rosbridge_suite</test_depend> 
  <test_depend>tf2_web_republisher</test_depend> 
  <test_depend>tf2_ros</test_depend> 
  <test_depend>rospy</test_depend> 
  <test_depend>geometry_msgs</test_depend> 
  <test_depend>map_server</test_depend> 

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
