<?xml version="1.0"?>
<package format="2">
  <name>ruvu_msgs</name>
  <version>0.0.0</version>
  <description>The ruvu_msgs package</description>

  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
</package>
